change header background

--- a/assets/css/3-modules/_header.sass
+++ b/assets/css/3-modules/_header.sass
@@ -1,6 +1,7 @@
 header
-	background-color: #ccc
+	background: url(../img/bg_header_1.jpg) center center
 	height: 450px
+	background-size: cover
 	
 	.logo
 		background-color: #999
