--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,8 +9,8 @@
 		<a href="#">Contact</a>
 	</nav>
 	
-	<h1><span>Artist theme</span></h1>
+	<h1><span>{{ site.title }}</span></h1>
 	
-	<p class="kicker">Thinker // Designer // Youtuber</p>
+	<p class="kicker">{{ site.description }}</p>
 	
 </header>
