--- a/assets/css/3-modules/_header.sass
+++ b/assets/css/3-modules/_header.sass
@@ -4,7 +4,6 @@ header
 	background-size: cover
 	
 	.logo
-		background-color: #999
 		+size(50px)
 		float: left
 		margin: 10px 0 0 40px
@@ -19,10 +18,7 @@ header
 		a
 			margin-left: 20px
 			color: rgba(0,0,0,0.7)
-			font:
-				size: 14px
-				weight: 700
-			text-transform: uppercase
+			@extend %small-bold
 			letter-spacing: 0.05em
 				
 			&:hover
@@ -51,12 +47,8 @@ header
 		line-height: 1
 		color: white
 		
-		font: 
-			weight: 700
-		
-		text:
-			transform: uppercase
-			align: center
+		@extend %small-bold
+		text-align: center
 		
 			
 		
