--- a/assets/css/2-base/_vars.sass
+++ b/assets/css/2-base/_vars.sass
@@ -1,6 +1,10 @@
 $primary-color: #F6C
 $text-color: #2E2D33
-$accent-color: #BD5248
-$bg-color: #F6F6F8
+$accent-color: #e1c185
+$bg-color: white
 $link-color: $accent-color
 $selection-color: #FFF498
+
+$accent-light: #e1c185
+$accent: #c99065
+$bg-color-grey: #e5eaee
