Fix xong bug skill-lockup ko center in Mobile

--- a/assets/css/3-modules/_profile.sass
+++ b/assets/css/3-modules/_profile.sass
@@ -62,6 +62,49 @@ h3
 		[class^="icon_"]	
 			margin: 10px
 			
+
+.skill_lockup
+	max-width: 540px
+	margin: 100px auto
+	color: #999
+	+clearfix
+
+
+	.skill_unit
+		width: 270px
+		float: left
+
+	.skill_icon
+		font-size: 0
+		margin: 3px 0 30px
+
+		span
+			display: inline-block
+			+size(14px)
+			background-color: $accent
+			margin-right: 8px
+			border-radius: 50%
+
+			&:after
+				content: ''
+				display: block
+				+size(10px)
+				background-color: white
+				border-radius: 50%
+				margin: 2px
+
+		@for $i from 0 through 10
+			&.skill_#{$i} span:nth-child(n+#{$i+1})
+				@extend %skill-color
+					
+@media screen and (max-width: 540px)
+	.skill_lockup
+		width: 270px
+
+		
+
+				
+			
 		
 			
 	
