--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -20,7 +20,69 @@
 	</div>
 	
 	<div class="skill_lockup">
+		<div class="skill_unit">
+			<div class="skill_lable">Communication</div>
+			<div class="skill_icon skill_8">
+				<span></span><span></span><span></span><span></span><span></span>
+				<span></span><span></span><span></span><span></span><span></span>
+			</div>
+		</div>
 		
+		<div class="skill_unit">
+			<div class="skill_lable">Learning</div>
+			<div class="skill_icon skill_0">
+				<span></span><span></span><span></span><span></span><span></span>
+				<span></span><span></span><span></span><span></span><span></span>
+			</div>
+		</div>
+		
+		<div class="skill_unit">
+			<div class="skill_lable">Planning</div>
+			<div class="skill_icon skill_7">
+				<span></span><span></span><span></span><span></span><span></span>
+				<span></span><span></span><span></span><span></span><span></span>
+			</div>
+		</div>
+		
+		<div class="skill_unit">
+			<div class="skill_lable">UX design</div>
+			<div class="skill_icon skill_3">
+				<span></span><span></span><span></span><span></span><span></span>
+				<span></span><span></span><span></span><span></span><span></span>
+			</div>
+		</div>
+		
+		<div class="skill_unit">
+			<div class="skill_lable">Organization</div>
+			<div class="skill_icon skill_8">
+				<span></span><span></span><span></span><span></span><span></span>
+				<span></span><span></span><span></span><span></span><span></span>
+			</div>
+		</div>
+		
+		<div class="skill_unit">
+			<div class="skill_lable">Teaching</div>
+			<div class="skill_icon">
+				<span></span><span></span><span></span><span></span><span></span>
+				<span></span><span></span><span></span><span></span><span></span>
+			</div>
+		</div>
+		
+		<div class="skill_unit">
+			<div class="skill_lable">Visual design</div>
+			<div class="skill_icon skill_4">
+				<span></span><span></span><span></span><span></span><span></span>
+				<span></span><span></span><span></span><span></span><span></span>
+			</div>
+		</div>
+		
+		<div class="skill_unit">
+			<div class="skill_lable">Programming</div>
+			<div class="skill_icon skill_9">
+				<span></span><span></span><span></span><span></span><span></span>
+				<span></span><span></span><span></span><span></span><span></span>
+			</div>
+		</div>
 		
 	</div>
 	
