--- a/assets/css/2-base/_base.sass
+++ b/assets/css/2-base/_base.sass
@@ -92,3 +92,9 @@ body
   color: $text-color
   -webkit-font-smoothing: antialiased
   -webkit-text-size-adjust: 100%
+  
+h3
+  @extend %small-bold
+  color: $accent-light
+  text-align: center
+  margin: 100px 0 30px
