--- a/assets/css/2-base/_placeholder.sass
+++ b/assets/css/2-base/_placeholder.sass
@@ -6,3 +6,9 @@
 	
 %skill-color 
 	background: $bg-color-grey
+
+%bg-overlay-effect
+	background-repeat: no-repeat, no-repeat
+	background-size: 50px 50px, cover
+	background-position: 70px 55px, 50% 50%
+	background-blend-mode: overlay, normal
