--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,4 @@
-<header>
-	
-	<div class="logo">{% include icons/logo.html %}</div>
+<header style="background-image: url(/assets/img/{{ site.bg-logo }}), url(/assets/img/{{ site.bg-img }});">
 	
 	<nav>
 		<a href="#">About me</a>
