--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -3,7 +3,7 @@
 	<h3>About myself</h3>
 	
 	<div class="face_lockup">
-		<div class="face_img"></div>
+		<div class="face_img" style="background: url(/assets/img/{{ site.avatar }});"></div>
 		
 		<div class="icon_pencil">{% include icons/icon_pencil.html %}</div>
 		<div class="icon_video">{% include icons/icon_video.html %}</div>
@@ -16,7 +16,7 @@
 	<!-- Put blurb in a div incase there are >1 blurbs </!--> 
 	
 	<div class="blurb">
-		<p><strong>In pellentesque faucibus vestibulum.</strong> Nulla at nulla justo, eget luctus tortor. Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et </p>
+		{{ site.blurb}}
 	</div>
 	
 	<div class="skill_lockup">
