--- a/assets/css/3-modules/_footer.sass
+++ b/assets/css/3-modules/_footer.sass
@@ -1,15 +1,10 @@
 footer
-	background: url(../img/logo.svg ) no-repeat, url(../img/bg_header_1.jpg)
-	background-size: 50px 50px, cover
-	background-position: 70px 55px, 50% 50%
-	background-blend-mode: overlay, normal
-	
+	@extend %bg-overlay-effect
 	
 	.lockup
 		padding: 30px
 		+clearfix
 	
-			
 		.wrap_content
 			float: left
 			margin: 30px 0 0 130px
