--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header style="background-image: url(/assets/img/{{ site.bg-logo }}), url(/assets/img/{{ site.bg-img }});">
 	
 	<nav>
-		<a href="#">About me</a>
+		<a href="#about">About me</a>
 		<a href="#">Work</a>
 		<a href="#">Clients</a>
 		<a href="#">Contact</a>
