--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,10 +3,10 @@
 		
 		<div class="wrap_content">
 			<nav>
-				<a href="#">About me</a>
-				<a href="#">Work</a>
-				<a href="#">Clients</a>
-				<a href="#">Contact</a>
+				<a href="#about">About me</a>
+				<a href="#work">Work</a>
+				<a href="#clients">Clients</a>
+				<a href="#contact">Contact</a>
 			</nav>
 			
 			<p class="copyright">All content copyright 2014</p>
