--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer style="background-image: url(/assets/img/{{ site.bg-logo }}), url(/assets/img/{{ site.bg-img }});">
+<footer style="background-image: url(/assets/img/{{ site.data.portfolio.bg-logo }}), url(/assets/img/{{ site.data.portfolio.bg-img }});">
 	<div class="lockup">
 		
 		<div class="wrap_content">
