--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,13 @@
-<header style="background-image: url(/assets/img/{{ site.bg-logo }}), url(/assets/img/{{ site.bg-img }});">
+<header style="background-image: url(/assets/img/{{ site.data.portfolio.bg-logo }}), url(/assets/img/{{ site.data.portfolio.bg-img }});">
 	
 	<nav>
-		<a href="#about">About me</a>
-		<a href="#">Work</a>
-		<a href="#">Clients</a>
-		<a href="#">Contact</a>
+		{% for item in site.data.portfolio.menus %}
+			<a href="{{ item.url }}">{{ item.name }}</a>
+		{% endfor%}
 	</nav>
 	
-	<h1><span>{{ site.title }}</span></h1>
+	<h1><span>{{ site.data.portfolio.title }}</span></h1>
 	
-	<p class="kicker">{{ site.description }}</p>
+	<p class="kicker">{{ site.data.portfolio.description }}</p>
 	
 </header>
