Path management system with logo.svg and bg-img
Remember how to reference to a file (placeholder.sass \) ../img/ -----
/assets/img/ . NOT assets/img because it is default refer to
assets/css/....

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,6 @@
-<section>
+<section id="about">
 	
-	<h3 id="about">About myself</h3>
+	<h3>About myself</h3>
 	
 	<div class="face_lockup">
 		<div class="face_img" style="background: url(/assets/img/{{ site.data.portfolio.avatar }});"></div>
