--- a/assets/css/2-base/_placeholder.sass
+++ b/assets/css/2-base/_placeholder.sass
@@ -12,3 +12,4 @@
 	background-size: 50px 50px, cover
 	background-position: 70px 55px, 50% 50%
 	background-blend-mode: overlay, normal
+	background-image: url(../img/#{$logo-path}), url(/assets/img/#{$bg-path})
