--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header style="background-image: url(/assets/img/{{ site.data.portfolio.bg-logo }}), url(/assets/img/{{ site.data.portfolio.bg-img }});">
+<header>
 	
 	<nav>
 		{% for item in site.data.portfolio.menus %}
