--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -1,6 +1,9 @@
 ---
 ---
 
+$logo-path: '{{ site.data.portfolio.bg-logo }}'
+$bg-path: '{{ site.data.portfolio.bg-img }}'
+
 @import '1-tools/-tools-index'
 @import '2-base/-base-index'
 @import '3-modules/-modules-index'
