--- a/assets/css/3-modules/_work.sass
+++ b/assets/css/3-modules/_work.sass
@@ -14,6 +14,7 @@
 			position: relative
 			padding-top: 16%
 			overflow: hidden
+			+perspective(300)
 			
 			background:
 				size: cover
@@ -25,7 +26,7 @@
 				padding-top: 30%
 				
 			.thumb-overlay
-				+position(absolute, 100% 0 null 0)
+				+position(absolute, 0% 0 null 0)
 				height: 100%
 				background: fade-out($accent, 0.2)
 				text-align: center
@@ -33,6 +34,9 @@
 				+display(flex)
 				+justify-content(space-around)
 				+flex-direction(column)
+				+transform(rotateX(90deg))
+				+transform-origin(bottom)
+				opacity: 0
 				
 				strong
 					padding: 0 20px
@@ -48,7 +52,9 @@
 				
 			&:hover 
 				.thumb-overlay
-					+position(absolute, 0 0 null 0)
+					top: 0
+					+transform(rotateX(0deg))
+					opacity: 1
 					
 					
 				
