--- a/assets/css/3-modules/_work.sass
+++ b/assets/css/3-modules/_work.sass
@@ -26,7 +26,7 @@
 				padding-top: 30%
 				
 			.thumb-overlay
-				+position(absolute, 0% 0 null 0)
+				+position(absolute, 100% 0 null 0)
 				height: 100%
 				background: fade-out($accent, 0.2)
 				text-align: center
@@ -34,9 +34,6 @@
 				+display(flex)
 				+justify-content(space-around)
 				+flex-direction(column)
-				+transform(rotateX(90deg))
-				+transform-origin(bottom)
-				opacity: 0
 				
 				strong
 					padding: 0 20px
@@ -53,8 +50,7 @@
 			&:hover 
 				.thumb-overlay
 					top: 0
-					+transform(rotateX(0deg))
-					opacity: 1
+					@extend %animation-target
 					
 					
 				
