work section interaction

--- a/_includes/work.html
+++ b/_includes/work.html
@@ -2,17 +2,41 @@
 
 	<h3>Work</h3>
 	
-	<div class="thumb-container">
+	<div class="work-belt">
+	
+		<div class="thumb-wrap">
+		
+			<div class="thumb-container">
+				{% for item in site.data.portfolio.projects %}
+					<div class="thumb-unit" style="background-image: url(/assets/img/work/{{ item.folder }}/thumb.jpg);">
+						<div class="thumb-overlay">
+							<strong>{{item.name}}</strong>
+							<div class="magnify">{% include icons/magnify.html %}</div>
+						</div>
+					</div>
+				{% endfor %}	
+			</div>
+			
+		</div>
 		
 		
-		{% for item in site.data.portfolio.projects %}
-			<a href="#" class="thumb-unit" style="background-image: url(/assets/img/work/{{ item.folder }}/thumb.jpg);">
-				<div class="thumb-overlay">
-					<strong>{{item.name}}</strong>
-					<div class="magnify">{% include icons/magnify.html %}</div>
-				</div>
-			</a>
-		{% endfor %}
+		<div class="work-wrap">
 		
+			<div class="work-container">
+			
+				<div class="work-return">{% include icons/icon-back.html %}</div>
+			
+				<h4>Do work</h4>
+				<p>This is a text</p>
+				<div style="width:600px; height: 600px; background:pink;"></div>
+				<p>This is a text</p>
+				<div style="width:600px; height: 600px; background:pink;"></div>
+				<p>This is a text</p>
+				<div style="width:600px; height: 600px; background:pink;"></div>
+			</div>
+		</div>
+			
 	</div>
+		
+		
 </section>
