Finish work interaction
REMEMBER:
- using of data-* in thumb-unit
- using spinner and find(), load() in function.js

--- a/_includes/work.html
+++ b/_includes/work.html
@@ -8,7 +8,7 @@
 		
 			<div class="thumb-container">
 				{% for item in site.data.portfolio.projects %}
-					<div class="thumb-unit" style="background-image: url(/assets/img/work/{{ item.folder }}/thumb.jpg);">
+					<div class="thumb-unit" data-folder="{{item.folder}}" style="background-image: url(/assets/img/work/{{ item.folder }}/thumb.jpg);">
 						<div class="thumb-overlay">
 							<strong>{{item.name}}</strong>
 							<div class="magnify">{% include icons/magnify.html %}</div>
@@ -26,13 +26,10 @@
 			
 				<div class="work-return">{% include icons/icon-back.html %}</div>
 			
-				<h4>Do work</h4>
-				<p>This is a text</p>
-				<div style="width:600px; height: 600px; background:pink;"></div>
-				<p>This is a text</p>
-				<div style="width:600px; height: 600px; background:pink;"></div>
-				<p>This is a text</p>
-				<div style="width:600px; height: 600px; background:pink;"></div>
+				<h4 class="project-tittle">Do work</h4>
+				
+				<div class="project-content"></div>
+				
 			</div>
 		</div>
 			
