Testimonial no responsive

--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -33,7 +33,7 @@
 	
 	<div class="client-icon-belt">
 		{% for client in site.data.portfolio.clients %}
-			<div class="client-icon" style="background-image: url(/assets/img/clients/{{ client.logo }})"></div>
+			<img class="client-icon" src="/assets/img/clients/{{ client.logo }}" />
 		{% endfor %}
 	
 	</div>
