--- a/assets/css/3-modules/_clients.sass
+++ b/assets/css/3-modules/_clients.sass
@@ -76,15 +76,11 @@
 	+size(800px 80px)
 	margin: 350px auto 30px
 	+display(flex)
+	+align-items(flex-end)
 	+justify-content(space-between)
 	position: relative	// Them doan nay vao la click dc icon
 	
 	.client-icon
-		min-width: 200px
-		background:
-			position: center center
-			size: contain
-			repeat: no-repeat
 		cursor: pointer
 		
 		&.active
