Finish testimonial section with responsive

--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -9,6 +9,12 @@
 	</div>
 	
 	
+	<div class="client-nav-mobile">
+		{% for client in site.data.portfolio.clients %}
+			<span></span>
+		{% endfor %}
+	</div>
+	
 	<div class="client-belt">
 		
 		{% for client in site.data.portfolio.clients %}
