--- a/assets/css/3-modules/_clients.sass
+++ b/assets/css/3-modules/_clients.sass
@@ -56,6 +56,22 @@
 			path
 				fill: $accent
 
+				
+.client-nav-mobile
+	text-align: center
+	display: none
+	
+	span
+		display: inline-block
+		margin-right: 10px
+		+size(16px)
+		border: 1px solid $bg-color-grey
+		border-radius: 50%
+		cursor: pointer
+		
+		&.active
+			border: 2px solid $accent
+		
 // -------------------
 // CLIENT CONTROLS
 
@@ -108,8 +124,11 @@
 @media (max-width: 750px)
 	
 	.client-icon-belt
-		+flex-wrap(wrap)
+		display: none
 	
+	.client-nav-mobile
+		display: block
+		
 	.client-controls
 		display: none
 	
